Попытка загрузить на сервер 2

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -28,7 +28,7 @@
     .headerBloc2 {
         display: flex;
         width: 100%;
-        justify-content: end;
+        justify-content: flex-end;
 
         div {
             width: 65%;
