--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,23 +4,26 @@
 
     .headerBloc1 {
         display: flex;
-        margin: 1%;
         justify-content: space-between;
 
         .sign_in {
-            width: 2%;
-            height: 1%;
+            width: 3%;
+            height: 2%;
+            margin-top: 1%;
+            margin-right: 1%;
+            cursor: pointer;
         }
 
         .El_kutbiImg {
-            width: 5%;
-            height: 1%;
-            margin-top: -0.5%;
+            width: 6%;
+            height: 2%;
             cursor: pointer;
         }
 
         .storeName {
+            margin-top: 1%;
             font-size: 3vw;
+            color: white;
         }
     }
 
@@ -30,17 +33,79 @@
         width: 100%;
         justify-content: flex-end;
 
-        div {
-            width: 65%;
+        form {
+            width: 60%;
             display: flex;
-            justify-content:space-between;
+            justify-content: space-between;
             margin-right: 1%;
+            margin-top: 1%;
+
+            .input {
+                width: 50%;
+                height: 50%;
+                border-radius: 20px;
+                margin-left: -6%;
+            }
+            div {
+                display: flex;
+                justify-content: space-between;
+                margin-top: 2%;
+                color: white;
+                cursor: pointer;
+                .contacts {
+                    width: 15%;
+                    height: 30%;
+                    margin-top: -3%;
+                }
+                b {
+                    font-size: 0.8vw;
+                }
+            }
+
         }
 
-        .input {
-            width: 50%;
-            border-radius: 20px;
-        }
+
 
     }
+}
+
+@media screen and (min-width: 500px) {
+    .header {
+        width: 100%;
+        background-color: #164f48;
+
+        .headerBloc1 {
+            .El_kutbiImg {
+                width: 10%;
+                height: 9%;
+            }
+        }
+
+        .headerBloc2 {
+            form {
+                margin-top: -1%;
+                .input {
+                    width: 50%;
+                    border-radius: 20px;
+                    margin-top: -1%;
+                    margin-left: -2%;
+                }
+
+                div {
+                    margin-top: -0.2%;
+                    .contacts {
+                        width: 15%;
+                        height: 30%;
+                    }
+                    b {
+                        // font-size: 1vw;
+                    }
+                }
+
+            }
+
+
+        }
+    }
+
 }
