--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,24 +5,27 @@
     .headerBloc1 {
         display: flex;
         justify-content: space-between;
+        align-items: center;
 
-        .sign_in {
-            width: 3%;
+        .basket {
+            width: 4%;
             height: 2%;
-            margin-top: 1%;
-            margin-right: 1%;
+            margin-right: 2%;
             cursor: pointer;
         }
 
         .El_kutbiImg {
-            width: 6%;
-            height: 2%;
+            display: none;
+        }
+
+        .menuImg {
+            width: 15%;
+            height: 7%;
             cursor: pointer;
         }
 
         .storeName {
-            margin-top: 1%;
-            font-size: 3vw;
+            font-size: 7vw;
             color: white;
         }
     }
@@ -32,83 +35,142 @@
         display: flex;
         width: 100%;
         justify-content: flex-end;
+        margin-left: -2%;
 
-        form {
-            width: 60%;
+
+        div {
+            width: 100%;
+            height: 100%;
             display: flex;
-            justify-content: space-between;
-            margin-right: 1%;
-            margin-top: 1%;
+            justify-content: flex-end;
 
-            .input {
-                width: 50%;
-                height: 50%;
-                border-radius: 20px;
-                margin-left: -6%;
+            .catalog {
+                display: none;
             }
-            div {
+
+            form {
+                width: 80%;
                 display: flex;
-                justify-content: space-between;
-                width: 12%;
-                margin-top: 2%;
-                color: white;
-                cursor: pointer;
-                .contacts {
-                    width: 15%;
-                    height: 30%;
-                    margin-top: -3%;
+                background-color: white;
+                margin-bottom: 1%;
+
+                .input {
+                    width: 80%;
+                    height: 80%;
+                    border: none;
+
                 }
-                b {
-                    font-size: 0.8vw;
-                    margin-top: -2%;
+
+                .search_button {
+                    width: 8%;
+                    border-radius: 3px;
+                    border: none;
+                    cursor: pointer;
+                    background-color: rgb(4, 19, 238);
+                    margin: 1%;
+                    margin-left: 20%;
+
+
+                    .search {
+                        width: 70%;
+                        height: 70%;
+                    }
                 }
             }
-
         }
 
 
-
     }
+
+    .headerBloc3 {
+        display: none;
+    }
+
 }
+
 
 @media screen and (min-width: 500px) {
     .header {
-        width: 100%;
-        background-color: #164f48;
-
         .headerBloc1 {
-            .El_kutbiImg {
-                width: 10%;
-                height: 9%;
+            width: 100%;
+
+            .menuImg {
+                display: none;
             }
+
+            .El_kutbiImg {
+                display: flex;
+                width: 9%;
+                height: 8%;
+            }
+
+            .storeName {
+                font-size: 5vw;
+            }
+
+            .basket {
+
+            }
+
         }
 
         .headerBloc2 {
-            form {
-                margin-top: -1%;
-                .input {
-                    width: 50%;
-                    border-radius: 20px;
-                    margin-top: -1%;
-                    margin-left: -2%;
-                    padding: 1.1%;
+            justify-content: center;
+
+            div {
+                justify-content: center;
+
+                .catalog {
+                    display: flex;
+                    align-items: center;
+                    width: 6.3%;
+                    margin-bottom: 1%;
+                    background-color: blue;
+                    border: none;
+                    border-radius: 4px;
+                    cursor: pointer;
+
+                    img {
+                        width: 35%;
+                        height: 90%;
+                    }
+                    p {
+                        font-size: 1vw;
+                    }
                 }
 
-                div {
-                    margin-top: -0.2%;
-                    .contacts {
-                        width: 15%;
-                        height: 30%;
+                form {
+                    display: flex;
+                    width: 30%;
+                    margin-left: 1%;
+                    border: solid 1px;
+                    height: 5%;
+
+
+                    .search_button {
+
+                        .search {
+                            width: 60%;
+                            height: 60%;
+
+                        }
+
                     }
-                    b {
-                       
+
+                    .input {
+                        width: 100%;
+                        padding: 2%;
+
                     }
+
                 }
 
             }
 
-
         }
+
     }
+
+
 
 }
