--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,8 +8,8 @@
         align-items: center;
 
         .basket {
-            width: 4%;
-            height: 2%;
+            width: 6%;
+            height: 4%;
             margin-right: 2%;
             cursor: pointer;
         }
@@ -32,15 +32,13 @@
 
 
     .headerBloc2 {
-        display: flex;
         width: 100%;
-        justify-content: flex-end;
         margin-left: -2%;
 
 
         div {
             width: 100%;
-            height: 100%;
+            height: 80%;
             display: flex;
             justify-content: flex-end;
 
@@ -49,27 +47,30 @@
             }
 
             form {
-                width: 80%;
+                width: 70%;
                 display: flex;
+                align-items: center;
                 background-color: white;
                 margin-bottom: 1%;
 
                 .input {
-                    width: 80%;
+                    width: 90%;
                     height: 80%;
                     border: none;
+                    margin: 1%;
+                    outline: none;
 
                 }
 
                 .search_button {
-                    width: 8%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 9%;
                     border-radius: 3px;
                     border: none;
+                    background-color: white;
                     cursor: pointer;
-                    background-color: rgb(4, 19, 238);
-                    margin: 1%;
-                    margin-left: 20%;
-
 
                     .search {
                         width: 70%;
@@ -82,9 +83,6 @@
 
     }
 
-    .headerBloc3 {
-        display: none;
-    }
 
 }
 
@@ -109,13 +107,15 @@
             }
 
             .basket {
-
+                width: 4%;
+                height: 3%;
+                margin-right: 2%;
+                cursor: pointer;
             }
 
         }
 
         .headerBloc2 {
-            justify-content: center;
 
             div {
                 justify-content: center;
@@ -134,6 +134,7 @@
                         width: 35%;
                         height: 90%;
                     }
+
                     p {
                         font-size: 1vw;
                     }
