Начал работу с footer, сделал адаптивным отзывчивым

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,12 +5,13 @@
 }
 
 body {
-  // background-color: #164f48;
-  
+  height: 100%;
   .App {
-    // justify-content: center;
+
     display: flex;
+
     width: 100%;
-    
+  
+ 
   }
 }
