--- a/src/components/Content/Form/Form.module.scss
+++ b/src/components/Content/Form/Form.module.scss
@@ -25,6 +25,7 @@
         margin: 10px;
         border-radius: 10px;
         background-color: white;
+        outline: none;
     }
     
     @media screen and (min-width: 740px) {
