--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -51,6 +51,7 @@
           padding: 2%;
           border: none;
           outline: none;
+          border-radius: 5px;
         }
       }
       .login_basket_container {
@@ -90,7 +91,55 @@
   }
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 375px) {
+  .header {
+  
+
+    .lower_header_block {
+      .header_functional_elements {
+        justify-content: space-around;
+        margin: 0 0 1% 0;
+
+        .menuImg {
+          display: flex;
+          width: 4%;
+          border: solid 1px #ffffff66;
+          padding: 0.1%;
+          border-radius: 8px;
+          cursor: pointer;
+          &:hover {
+            border-color: white;
+          }
+        }
+        .storeName {
+
+          .name_link {
+
+          }
+        }
+
+        form {
+          width: 40%;
+          padding: 2px;
+
+          .search_button {
+            width: 10%;
+            .search {
+              width: 65%;
+            }
+          }
+
+          .input {
+           
+            width: 100%;
+          }
+        }
+
+      }
+    }
+  }
+}
+@media screen and (min-width: 500px) {
   .header {
     .upper_header_block {
       display: flex;
@@ -130,7 +179,7 @@
 
         form {
           width: 40%;
-          padding: 5px;
+          padding: 2px;
 
           .search_button {
             width: 10%;
@@ -163,6 +212,21 @@
             }
           }
         }
+      }
+    }
+  }
+}
+@media screen and (min-width: 800px) {
+  .header {
+    .lower_header_block {
+      .header_functional_elements {
+        
+        form {
+          padding: 5px;
+
+        }
+
+       
       }
     }
   }
