--- a/src/pages/ProductsPage/ProductsPage.module.scss
+++ b/src/pages/ProductsPage/ProductsPage.module.scss
@@ -1,3 +1,10 @@
-.MainPageContainer {
-    
+.mainPage {
+  background-color: #fff;
+  border-radius: 25px;
+}
+
+@media screen and (max-width: 1024px) {
+  .mainPage {
+    border-radius: 0;
+  }
 }
