--- a/src/components/Content/Menu/Menu.module.scss
+++ b/src/components/Content/Menu/Menu.module.scss
@@ -1,16 +1,25 @@
 .menuContainer {
   display: flex;
   height: 100%;
- 
+  position: relative;
   width: 100%;
   .sectionContainer {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    width: 100%;
+    width: 25%;
     height: 100%;
     align-items: center;
-
+    background-color: #fff;
+    .buttonContainer {
+      margin-left: auto;
+      .button_menuNone {
+        margin: 3px;
+        cursor: pointer;
+        border: none;
+        background-color: white;
+      }
+    }
     section {
       width: 100%;
       height: 100%;
@@ -137,21 +146,20 @@
       }
     }
   }
-
-  .buttonContainer {
-    .button_menuNone {
-      margin: 3px;
-      cursor: pointer;
-      border: none;
-      background-color: white;
-    }
+  .menuOpacityBlock {
+    width: 75%;
+    background-color: #242424;
+    opacity: .1;
   }
+
+
 }
 
 @media screen and (max-width: 1024px) {
   .menuContainer {
     .sectionContainer {
       height: 90%;
+      width: 100%;
       margin-left: 15px;
 
       section {
@@ -195,6 +203,9 @@
         }
       }
     }
+.menuOpacityBlock {
+  display: none;
+}
     .buttonContainer {
       display: none;
     }
