--- a/src/components/Content/ProductList/ProductList.module.scss
+++ b/src/components/Content/ProductList/ProductList.module.scss
@@ -16,28 +16,17 @@
     background-color: white;
     border-radius: 5px;
     cursor: pointer;
-    
+
     .productImageContainer {
+      position: relative;
+      width: 80%;
       .productImage {
-        margin-top: 3%;
-        width: 90%;
+        width: 100%;
       }
       display: flex;
-      justify-content: center;
-      .favorites_book_button {
-        display: flex;
-        width: 28px;
-        height: 25px;
-        background-image: url(data:image/svg+xml,%3Csvg%20width%3D%2223%22%20height%3D%2221%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20opacity%3D%22.6%22%20d%3D%22M12.113%2019.777a.98.98%200%200%201-1.246%200C5.327%2015.102.85%2010.749%201.004%206.985c0-2.764%202.093-5.693%205.743-5.973%201.274-.071%203.22.194%204.741%201.542%201.55-1.352%203.65-1.632%204.735-1.537%203.216.187%205.776%202.77%205.776%205.968.082%203.87-4.32%208.125-9.886%2012.792Z%22%20fill%3D%22%23fff%22%2F%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M12.781%2020.524a1.965%201.965%200%200%201-2.563%200c-2.47-2.126-4.956-4.323-6.825-6.462C1.593%2012.002%200%209.6%200%207.066%200%203.057%203.216%200%207.208%200A7.77%207.77%200%200%201%2011.5%201.322%207.77%207.77%200%200%201%2015.792%200C19.784%200%2023%203.057%2023%207.065c0%202.534-1.592%204.937-3.393%206.997-1.869%202.14-4.356%204.336-6.825%206.463ZM11.5%202.512A6.825%206.825%200%200%201%2015.792.955c3.484%200%206.25%202.651%206.25%206.11%200%202.16-1.375%204.331-3.158%206.37-1.817%202.081-4.255%204.237-6.73%206.367a1.003%201.003%200%200%201-1.309%200c-2.474-2.13-4.911-4.286-6.73-6.366C2.334%2011.396.959%209.225.959%207.066c0-3.46%202.765-6.111%206.25-6.111%201.555%200%203.102.574%204.292%201.557ZM7.208%203.92c-1.919%200-3.283%201.395-3.283%203.146%200%20.993.696%202.442%202.425%204.421%201.369%201.566%203.162%203.222%205.15%204.96%201.988-1.738%203.781-3.394%205.15-4.96%201.73-1.979%202.425-3.428%202.425-4.42%200-1.752-1.364-3.147-3.283-3.147-1.053%200-2.134.496-2.81%201.274a1.964%201.964%200%200%201-2.964%200c-.676-.778-1.757-1.274-2.81-1.274ZM11.5%2017.714c-2.237-1.94-4.313-3.816-5.873-5.601-1.746-1.999-2.66-3.68-2.66-5.048%200-2.297%201.812-4.1%204.241-4.1%201.332%200%202.677.616%203.534%201.603a1.004%201.004%200%200%200%201.515%200c.858-.987%202.203-1.604%203.535-1.604%202.429%200%204.242%201.804%204.242%204.101%200%201.368-.915%203.05-2.661%205.048-1.56%201.785-3.636%203.662-5.873%205.6Z%22%20fill%3D%22%23fff%22%2F%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M7.225%203C4.805%203%203%204.796%203%207.082c0%201.36.91%203.034%202.65%205.023%201.554%201.777%203.621%203.644%205.85%205.574%202.229-1.93%204.296-3.797%205.85-5.574C19.09%2010.116%2020%208.443%2020%207.081%2020%204.796%2018.194%203%2015.775%203c-1.326%200-2.666.614-3.52%201.597a1%201%200%200%201-1.51%200C9.892%203.614%208.552%203%207.226%203ZM1%207.082C1%203.639%203.754%201%207.225%201c1.55%200%203.09.572%204.275%201.55A6.802%206.802%200%200%201%2015.775%201C19.245%201%2022%203.639%2022%207.082c0%202.149-1.37%204.31-3.145%206.34-1.81%202.07-4.238%204.215-6.703%206.336a1%201%200%200%201-1.304%200c-2.465-2.12-4.892-4.266-6.703-6.336C2.369%2011.392%201%209.23%201%207.082Z%22%20fill%3D%22%23242424%22%2F%3E%3C%2Fsvg%3E);
-        background-repeat: no-repeat;
-        border: none;
-        background-color: transparent;
+      .favorites_button_container {
         position: absolute;
-        margin-left: 36%;
-        cursor: pointer;
-        &:hover {
-          filter: sepia(2) hue-rotate(90deg) saturate(4);
-        }
+        right: 0;
       }
     }
     .productInfo {
@@ -57,6 +46,12 @@
       box-shadow: 0px 0px 5px 5px #ffffff66(255, 255, 255, 255);
     }
   }
+  .moreItemsButtonContainer {
+    margin-bottom: 1%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
 }
 
 @media screen and (min-width: 400px) {
@@ -64,12 +59,6 @@
     .productList {
       width: 40%;
       font-size: 2vw;
-      .productImageContainer {
-        .favorites_book_button {
-          margin-left: 32%;
-        }
-      }
-
       .booksAuthor {
         font-size: 1.8vw;
       }
@@ -81,12 +70,6 @@
     .productList {
       width: 25%;
       font-size: 2vw;
-      .productImageContainer {
-        .favorites_book_button {
-          margin-left: 19%;
-        }
-      }
-
       .booksAuthor {
         font-size: 1.8vw;
       }
@@ -96,12 +79,6 @@
 @media screen and (min-width: 650px) {
   .productListСontainer {
     .productList {
-      .productImageContainer {
-        .favorites_book_button {
-          margin-left: 20%;
-        }
-      }
-
       .booksAuthor {
         font-size: 1.7vw;
       }
@@ -113,11 +90,6 @@
     .productList {
       width: 18%;
       font-size: 1.1vw;
-      .productImageContainer {
-        .favorites_book_button {
-          margin-left: 14%;
-        }
-      }
       .booksAuthor {
         font-size: 1vw;
       }
@@ -129,11 +101,6 @@
     .productList {
       width: 15%;
       font-size: 1.1vw;
-      .productImageContainer {
-        .favorites_book_button {
-          margin-left: 12%;
-        }
-      }
       .booksAuthor {
         font-size: 1vw;
       }
@@ -146,14 +113,10 @@
       width: 15%;
       font-size: 0.9vw;
       .productImageContainer {
-        .favorites_book_button {
+        .favorites_button_container {
           display: none;
         }
 
-        .productImage {
-          margin-top: 3%;
-          width: 70%;
-        }
       }
 
       .booksAuthor {
@@ -165,13 +128,10 @@
       }
 
       &:hover {
-        .favorites_book_button {
+        .favorites_button_container {
           display: flex;
-          margin-left: 9%;
-          &:hover {
-            filter: sepia(2) hue-rotate(90deg) saturate(4);
-          }
         }
+
         .productButtonContainer {
           display: flex;
         }
