--- a/src/components/Layout/FixedMenu/FixedMenu.module.scss
+++ b/src/components/Layout/FixedMenu/FixedMenu.module.scss
@@ -113,6 +113,19 @@
       height: 40px;
     }
   }
+  .FixedMenuLinkSelectedActive {
+    position: relative;
+    z-index: 4;
+    &::before {
+      content: "";
+      background-image: url("../../../logo/pngwing.com (2) (2).png");
+      background-repeat: no-repeat;
+      background-size: 20px, 20px;
+      display: block;
+      width: 40px;
+      height: 40px;
+    }
+  }
   .FixedMenuLinkPersonalAccount {
     position: relative;
     z-index: 4;
