--- a/src/components/Layout/FixedMenu/FixedMenu.module.scss
+++ b/src/components/Layout/FixedMenu/FixedMenu.module.scss
@@ -139,6 +139,19 @@
       height: 40px;
     }
   }
+  .FixedMenuLinkPersonalAccountActive {
+    position: relative;
+    z-index: 4;
+    &::before {
+      content: "";
+      background-image: url("../../../logo/user.png");
+      background-repeat: no-repeat;
+      background-size: 20px, 20px;
+      display: block;
+      width: 40px;
+      height: 40px;
+    }
+  }
 }
 
 @media screen and (min-width: 1024px) {
